k8s/spack/spackbot-dev-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbot-dev-spack-io
  namespace: spack
  labels:
    app: spackbot-dev-spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: spackbot-dev-spack-io
      svc: web
  replicas: 2
  template:
    metadata:
      labels:
        app: spackbot-dev-spack-io
        svc: web
    spec:
      containers:
      - name: web
        image: "ghcr.io/spack/spack-bot@sha256:94fc2270c03f13218f748e34f4ff1a6d48da5d232240df06020c9fb14ed81063"

        # Mount secrets to non-existing location
        volumeMounts:
          - mountPath: "/git_rsa"
            name: spack-bot-dev-credentials
            readOnly: true

        # The container lifecycle ensures the credential files are copied to the right space.
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c
                - mkdir -p /root/.ssh && cp /git_rsa/id_rsa /root/.ssh/id_rsa && cp /git_rsa/id_rsa.pub /root/.ssh/id_rsa.pub

        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
      volumes:
        - name: spack-bot-dev-credentials
          secret:
            secretName: spack-bot-dev-credentials
      nodeSelector:
        spack.io/node-pool: base
